overlays/uksouth-retail/olympus/angelia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api.${cluster_name}.${cluster_location}.bink.sh-angelia
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: api.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: angelia-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.${cluster_name}.${cluster_location}.bink.sh
